--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "build": "webpack"
   },
-  "dependencies": {
-    "webpack": "^4.39.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
   }
 }
